--- a/recorder/templates/accounts/login.html
+++ b/recorder/templates/accounts/login.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'accounts/login.css' %}" />
 {% endblock extra-head %}
 
-{% block title %}Recorder Login{% endblock title %}
+{% block title %}memocha Login{% endblock title %}
 
 {% block content %}
     <form class="form-login" method="post" action=".">
