--- a/recorder/templates/base.html
+++ b/recorder/templates/base.html
@@ -34,7 +34,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/recorder">Memocha</a>
+                <a class="navbar-brand" href="/recorder">memocha</a>
             </div>
 
             <div id="navbar" class="collapse navbar-collapse">
