--- a/recorder/templates/recorder/doctor_dashboard.html
+++ b/recorder/templates/recorder/doctor_dashboard.html
@@ -2,13 +2,18 @@
 
 {% block title %}Dashboard{%  endblock title %}
 
+{% block extra-head %}
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'recorder/doctor_dashboard.css' %}" />
+{% endblock extra-head %}
+
 {% block content %}
     <h2>Patients</h2>
-    <ul>
+    <div class="list-group">
         {% for patient in patients %}
-            <li><a href="{% url 'recorder:patient_details' patient.id %}">{{ patient }}</a></li>
+            <a href="{% url 'recorder:patient_details' patient.id %}" class="list-group-item list-group-item-action">{{ patient }}</a>
         {% endfor %}
-    </ul>
-    <button class="btn btn-block" onclick="location.href='{% url 'recorder:add_patient' %}'">
+    </div>
+    <button class="btn btn-block btn-primary" onclick="location.href='{% url 'recorder:add_patient' %}'">
         Add new patient</button>
 {% endblock content %}
