Adds the site icon

--- a/recorder/templates/base.html
+++ b/recorder/templates/base.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}" />
 
     <title>{% block title %}Base Template{% endblock title %}</title>
+    <link rel="shortcut icon" href="{% static 'favicon.ico' %}"/>
 
     {% block extra-head %}
     {% endblock extra-head %}
