--- a/recorder/templates/recorder/doctor_dashboard.html
+++ b/recorder/templates/recorder/doctor_dashboard.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Dashboard{%  endblock title %}
+{% block title %}memocha Doctor Dashboard{%  endblock title %}
 
 {% block extra-head %}
     {% load static %}
