Changes home button to go to dashboard for user

--- a/recorder/templates/recorder/add_patient.html
+++ b/recorder/templates/recorder/add_patient.html
@@ -29,6 +29,11 @@
                 addText: 'Add Prescription',
                 deleteText: 'remove'
             })
+        });
+
+        $(function() {
+            var home_link = document.getElementById('home-link');
+            home_link.href = '/recorder/doctor';
         })
     </script>
 {% endblock extra-js %}
