--- a/recorder/templates/recorder/patient_dashboard.html
+++ b/recorder/templates/recorder/patient_dashboard.html
@@ -96,6 +96,11 @@
             }
         });
 
+        $(function() {
+            var home_link = document.getElementById('home-link');
+            home_link.href = '/recorder/patient';
+        });
+
         function checkNested(obj) {
             var args = Array.prototype.slice.call(arguments, 1);
 
