--- a/recorder/templates/base.html
+++ b/recorder/templates/base.html
@@ -40,7 +40,7 @@
 
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="/recorder">Home</a></li>
+                    <li><a href="/recorder" id="home-link">Home</a></li>
                 </ul>
 
                 {% if user.is_authenticated %}
