--- a/recorder/templates/recorder/patient_details.html
+++ b/recorder/templates/recorder/patient_details.html
@@ -159,6 +159,11 @@
             });
         });
 
+        $(function() {
+            var home_link = document.getElementById('home-link');
+            home_link.href = '/recorder/doctor';
+        });
+
         function checkNested(obj) {
             var args = Array.prototype.slice.call(arguments, 1);
 
