--- a/recorder/static/recorder/patient_dashboard.css
+++ b/recorder/static/recorder/patient_dashboard.css
@@ -14,3 +14,14 @@
     display: block;
     margin-bottom: 10px;
 }
+
+.btn-primary{
+    background-image: none;
+    background-color: #1aaed7;
+    color: white;
+    border: none;
+}
+
+.btn-primary:hover {
+    background-color: #1cb8e3;
+}
