--- a/recorder/static/recorder/add_patient.css
+++ b/recorder/static/recorder/add_patient.css
@@ -1,14 +1,26 @@
-.btn-primary{
+#save-patient.btn-primary{
     background-image: none;
     background-color: #1aaed7;
     color: white;
     border: none;
 }
 
-.btn-primary:hover {
+#save-patient.btn-primary:hover {
     background-color: #1cb8e3;
 }
 
-#submit-button {
+.delete-row {
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.add-row {
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+#save-patient {
     float: right
 }
