Makes the create account button for doctors bigger

--- a/recorder/templates/recorder/doctor_creation.html
+++ b/recorder/templates/recorder/doctor_creation.html
@@ -15,7 +15,7 @@
         {% csrf_token %}
         {{ form|bootstrap_horizontal }}
         <div class="form-group">
-            <button id="submit-button" class="btn btn-primary" type="submit">Create Account</button>
+            <button id="submit-button" class="btn btn-lg btn-primary" type="submit">Create Account</button>
         </div>
     </form>
 {% endblock content %}
