--- a/recorder/static/recorder/patient_details.css
+++ b/recorder/static/recorder/patient_details.css
@@ -9,14 +9,15 @@
     background-color: #1cb8e3;
 }
 
-#remove_patient {
+#remove-patient {
     background-image: none;
     background-color: black;
     color: white;
     border: none;
+    float: right;
 }
 
-#remove_patient:hover {
+#remove-patient:hover {
     background-color: #3b3b3b;
 }
 
@@ -35,4 +36,32 @@
 #video_table a {
     display: block;
     margin-bottom: 10px;
+}
+
+.delete-row {
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.add-row {
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+#save-patient {
+    float: right;
+}
+
+.approve {
+    background-color: green;
+    color: white;
+    border: none;
+}
+
+.disapprove {
+    background-color: red;
+    color: white;
+    border: none;
 }
