--- a/recorder/static/recorder/patient_details.css
+++ b/recorder/static/recorder/patient_details.css
@@ -21,18 +21,20 @@
     background-color: #3b3b3b;
 }
 
-.no-video {
+#video_table {
+    text-align: center;
 }
 
-.yes-video {
+#video_table .btn {
+    background-image: none;
+    border: none;
+    box-shadow: none;
 }
 
-.maybe-video {
-}
-
-#video_table a {
-    display: block;
-    margin-bottom: 10px;
+#video_table p {
+    margin-bottom: 0;
+    padding-top: 6px;
+    padding-bottom: 6px;
 }
 
 .delete-row {
@@ -51,14 +53,10 @@
     float: right;
 }
 
-.approve {
-    background-color: green;
-    color: white;
-    border: none;
+#approval_table td {
+    vertical-align: middle;
 }
 
-.disapprove {
-    background-color: red;
-    color: white;
-    border: none;
+#approval_table .btn {
+    padding: 4px 9px 4px 9px;
 }
