--- a/recorder/static/recorder/patient_dashboard.css
+++ b/recorder/static/recorder/patient_dashboard.css
@@ -1,18 +1,21 @@
-.no-video {
-    color: red;
+#video_table .btn {
+    background-image: none;
+    border: none;
+    box-shadow: none;
 }
 
-.yes-video {
-    color: green;
+#video_table tbody p {
+    margin-bottom: 0;
+    padding: 6px 12px 6px 12px;
 }
 
-.maybe-video {
-    color: yellow;
+#video_table tbody th {
+    padding-top: 14px;
 }
 
-#video_table a {
-    display: block;
-    margin-bottom: 10px;
+#video_table thead p {
+    margin-bottom: 0;
+    padding-left: 6px;
 }
 
 .btn-primary{
