--- a/recorder/templates/recorder/patient_dashboard.html
+++ b/recorder/templates/recorder/patient_dashboard.html
@@ -73,25 +73,32 @@
             var table = document.getElementById("video_table");
             var header = table.createTHead();
             var row = header.insertRow(-1);
-            var header_cells = ["Medication"].concat(dates);
-            for (i=0; i < header_cells.length; i++) {
-                var cell = row.insertCell(-1);
-                cell.innerHTML = header_cells[i];
+            var cell = document.createElement("TH");
+            row.appendChild(cell);
+            cell.innerHTML = "Medication";
+            for (i=0; i < dates.length; i++) {
+                cell = document.createElement("TH");
+                row.appendChild(cell);
+                node = document.createElement("P");
+                node.innerHTML = dates[i];
+                cell.appendChild(node);
             }
+            var body = table.createTBody();
             var prescriptions = {{ prescriptions|safe }};
             for (i=0; i < prescriptions.length; i++) {
                 var prescription = prescriptions[i];
-                row = table.insertRow(-1);
-                cell = row.insertCell(-1);
+                row = body.insertRow(-1);
+                cell = document.createElement("TH");
                 cell.innerHTML = prescription[1];
-                for (j=1; j < header_cells.length; j++) {
+                row.appendChild(cell);
+                for (j=0; j < dates.length; j++) {
                     cell = row.insertCell(-1);
                     var times = prescription[3];
                     for (k=0; k < times.length; k++) {
                         var real_time = times[k].substring(0, times[k].length - 3);
                         node = document.createElement("P");
                         node.innerHTML = real_time;
-                        node.classList.add('no-video');
+                        node.classList.add('text-danger');
                         cell.appendChild(node);
                     }
                 }
@@ -101,19 +108,20 @@
             table = $("#video_table");
             for (i=0; i < videos.length; i++) {
                 var video = videos[i];
-                row = table.find("tr:contains("+ video.medication +")")[0];
-                column = table.find("td:contains("+ video.date +")").index();
+                row = table.find("th:contains("+ video.medication +")").parent()[0];
+                column = table.find("p:contains("+ video.date +")").parent().index();
                 cell = row.cells[column];
                 node = $(cell).find("p:contains("+ video.timeslot +")");
                 new_node = document.createElement("A");
+                new_node.roll = "button";
                 new_node.innerHTML = video.timeslot;
                 new_node.href = video.url;
                 if (video.approved === true) {
-                    new_node.classList.add('yes-video');
+                    new_node.classList.add('btn', 'btn-success');
                 } else if (video.approved === false) {
-                    new_node.classList.add('no-video');
+                    new_node.classList.add('btn', 'btn-danger');
                 } else {
-                    new_node.classList.add('maybe-video');
+                    new_node.classList.add('btn', 'btn-warning');
                 }
                 $(node).replaceWith(new_node);
             }
