Starts adding the bootstrap grids

--- a/recorder/templates/recorder/doctor_creation.html
+++ b/recorder/templates/recorder/doctor_creation.html
@@ -11,11 +11,13 @@
 
 {% block content %}
     <h2>Account Creation</h2>
-    <form method="post">
+    <form class="form-horizontal" method="post">
         {% csrf_token %}
         {{ form|bootstrap_horizontal }}
         <div class="form-group">
-            <button id="submit-button" class="btn btn-lg btn-primary">Create Account</button>
+            <div class="col-sm-10 col-sm-offset-2">
+                <button id="submit-button" class="btn btn-lg btn-primary">Create Account</button>
+            </div>
         </div>
     </form>
 {% endblock content %}
